test/lhsBadFunction.slq
// args: --run

def foo(x:ğ”¹)mfree:ğŸ™{
	forget(x=0);
	k:=0:!ğ”¹[]; /// error
}

def main(){
	foo(x):=();
	return x;
}
